--- a/CodeCoverage/Report/Summary.xml
+++ b/CodeCoverage/Report/Summary.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <CoverageReport scope="Summary">
   <Summary>
-    <Generatedon>5/3/2025 - 5:18:57 PM</Generatedon>
+    <Generatedon>5/3/2025 - 6:26:36 PM</Generatedon>
     <Parser>MultiReportParser (4x OpenCoverParser)</Parser>
     <Assemblies>9</Assemblies>
-    <Classes>20</Classes>
-    <Files>20</Files>
-    <Coveredlines>673</Coveredlines>
-    <Uncoveredlines>36</Uncoveredlines>
-    <Coverablelines>709</Coverablelines>
-    <Totallines>1344</Totallines>
-    <Linecoverage>94.9</Linecoverage>
+    <Classes>21</Classes>
+    <Files>21</Files>
+    <Coveredlines>704</Coveredlines>
+    <Uncoveredlines>92</Uncoveredlines>
+    <Coverablelines>796</Coverablelines>
+    <Totallines>1416</Totallines>
+    <Linecoverage>88.4</Linecoverage>
     <Coveredbranches>0</Coveredbranches>
     <Totalbranches>0</Totalbranches>
-    <Coveredmethods>145</Coveredmethods>
-    <Totalmethods>154</Totalmethods>
-    <Methodcoverage>94.1</Methodcoverage>
+    <Coveredmethods>186</Coveredmethods>
+    <Totalmethods>204</Totalmethods>
+    <Methodcoverage>91.1</Methodcoverage>
   </Summary>
   <Coverage>
     <Assembly name="Clock" classes="4" coverage="96.4" coveredlines="27" coverablelines="28" totallines="72" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="9" totalmethods="9" methodcoverage="100">
@@ -31,30 +31,31 @@
     <Assembly name="ClockTestPlayMode" classes="1" coverage="100" coveredlines="12" coverablelines="12" totallines="35" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="1" totalmethods="1" methodcoverage="100">
       <Class name="ClockViewTest" coverage="100" coveredlines="12" coverablelines="12" totallines="35" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="1" totalmethods="1" methodcoverage="100" />
     </Assembly>
-    <Assembly name="StopWatch" classes="4" coverage="85.4" coveredlines="117" coverablelines="137" totallines="236" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="24" totalmethods="30" methodcoverage="80">
+    <Assembly name="StopWatch" classes="4" coverage="88.3" coveredlines="121" coverablelines="137" totallines="236" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="25" totalmethods="30" methodcoverage="83.3">
       <Class name="StopwatchModel" coverage="100" coveredlines="9" coverablelines="9" totallines="16" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="4" totalmethods="4" methodcoverage="100" />
       <Class name="StopwatchPresenter" coverage="81.4" coveredlines="22" coverablelines="27" totallines="52" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="3" totalmethods="4" methodcoverage="75" />
       <Class name="StopwatchService" coverage="90.2" coveredlines="37" coverablelines="41" totallines="69" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="9" totalmethods="9" methodcoverage="100" />
-      <Class name="StopwatchView" coverage="81.6" coveredlines="49" coverablelines="60" totallines="99" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="8" totalmethods="13" methodcoverage="61.5" />
+      <Class name="StopwatchView" coverage="88.3" coveredlines="53" coverablelines="60" totallines="99" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="9" totalmethods="13" methodcoverage="69.2" />
     </Assembly>
-    <Assembly name="StopwatchTest" classes="2" coverage="95.6" coveredlines="87" coverablelines="91" totallines="175" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="37" totalmethods="39" methodcoverage="94.8">
+    <Assembly name="StopwatchTest" classes="2" coverage="97.7" coveredlines="87" coverablelines="89" totallines="173" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="37" totalmethods="39" methodcoverage="94.8">
       <Class name="StopwatchPresenterTest" coverage="95.5" coveredlines="43" coverablelines="45" totallines="86" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="29" totalmethods="31" methodcoverage="93.5" />
-      <Class name="StopwatchServiceTest" coverage="95.6" coveredlines="44" coverablelines="46" totallines="89" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="8" totalmethods="8" methodcoverage="100" />
+      <Class name="StopwatchServiceTest" coverage="100" coveredlines="44" coverablelines="44" totallines="87" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="8" totalmethods="8" methodcoverage="100" />
     </Assembly>
-    <Assembly name="StopwatchTestPlayMode" classes="1" coverage="96" coveredlines="73" coverablelines="76" totallines="129" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="7" totalmethods="7" methodcoverage="100">
-      <Class name="StopwatchViewTest" coverage="96" coveredlines="73" coverablelines="76" totallines="129" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="7" totalmethods="7" methodcoverage="100" />
+    <Assembly name="StopwatchTestPlayMode" classes="1" coverage="100" coveredlines="74" coverablelines="74" totallines="129" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="6" totalmethods="6" methodcoverage="100">
+      <Class name="StopwatchViewTest" coverage="100" coveredlines="74" coverablelines="74" totallines="129" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="6" totalmethods="6" methodcoverage="100" />
     </Assembly>
-    <Assembly name="Timer" classes="4" coverage="95.3" coveredlines="164" coverablelines="172" totallines="301" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="37" totalmethods="38" methodcoverage="97.3">
+    <Assembly name="Timer" classes="4" coverage="72" coveredlines="126" coverablelines="175" totallines="306" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="32" totalmethods="39" methodcoverage="82">
       <Class name="TimerModel" coverage="100" coveredlines="7" coverablelines="7" totallines="14" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="3" totalmethods="3" methodcoverage="100" />
-      <Class name="TimerPresenter" coverage="100" coveredlines="70" coverablelines="70" totallines="124" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="9" totalmethods="9" methodcoverage="100" />
-      <Class name="TimerService" coverage="83.6" coveredlines="41" coverablelines="49" totallines="79" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="9" totalmethods="10" methodcoverage="90" />
-      <Class name="TimerView" coverage="100" coveredlines="46" coverablelines="46" totallines="84" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="16" totalmethods="16" methodcoverage="100" />
+      <Class name="TimerPresenter" coverage="50" coveredlines="35" coverablelines="70" totallines="126" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="5" totalmethods="10" methodcoverage="50" />
+      <Class name="TimerService" coverage="71.4" coveredlines="35" coverablelines="49" totallines="79" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="8" totalmethods="10" methodcoverage="80" />
+      <Class name="TimerView" coverage="100" coveredlines="49" coverablelines="49" totallines="87" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="16" totalmethods="16" methodcoverage="100" />
     </Assembly>
-    <Assembly name="TimerTest" classes="1" coverage="100" coveredlines="35" coverablelines="35" totallines="68" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="6" totalmethods="6" methodcoverage="100">
+    <Assembly name="TimerTest" classes="2" coverage="95.7" coveredlines="90" coverablelines="94" totallines="159" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="43" totalmethods="47" methodcoverage="91.4">
+      <Class name="TimerPresenterTest" coverage="93.2" coveredlines="55" coverablelines="59" totallines="91" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="37" totalmethods="41" methodcoverage="90.2" />
       <Class name="TimerServiceTests" coverage="100" coveredlines="35" coverablelines="35" totallines="68" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="6" totalmethods="6" methodcoverage="100" />
     </Assembly>
-    <Assembly name="TimerTestPlayMode" classes="1" coverage="100" coveredlines="105" coverablelines="105" totallines="211" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="8" totalmethods="8" methodcoverage="100">
-      <Class name="TimerPlayModeTests" coverage="100" coveredlines="105" coverablelines="105" totallines="211" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="8" totalmethods="8" methodcoverage="100" />
+    <Assembly name="TimerTestPlayMode" classes="1" coverage="85" coveredlines="114" coverablelines="134" totallines="189" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="17" totalmethods="17" methodcoverage="100">
+      <Class name="TimerViewTest" coverage="85" coveredlines="114" coverablelines="134" totallines="189" branchcoverage="" coveredbranches="0" totalbranches="0" coveredmethods="17" totalmethods="17" methodcoverage="100" />
     </Assembly>
   </Coverage>
 </CoverageReport>
